src/main/java/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package parser;
import java.util.TreeMap;
import java.awt.Color;
import automat.*;
import rules.*;

/**
* Parser for the script language.
* @author Wolfgang Bongartz
*/
public class Parser implements ParserConstants {
  /**
  * Constructor.
  * @param s Script to be parsed.
  */
  public Parser(String s)
  {
    this (new java.io.StringReader(s));
  }

  /**
  * Re-initialize the parser.
  * @param s Script to be parsed.
  */
  public void ReInit(String s)
  {
    ReInit(new java.io.StringReader(s));
  }

  final public CellularAutomat ca_definition() throws ParseException {
  CellularAutomat ca = new CellularAutomat();
  Habitat h = null;
  Inhabitant it = null;
  Rule r = null;
  int population=0;
    jj_consume_token(CELLULAR);
    jj_consume_token(AUTOMAT);
    jj_consume_token(S_OB);
    h = habitat_definition();
                             ca.setHabitat(h);
    if (jj_2_1(3)) {
      jj_consume_token(POPULATE);
      jj_consume_token(46);
      population = percentage_value();
    } else {
      ;
    }
    label_1:
    while (true) {
      it = inhabitant_template_definition();
                                            ca.addInhabitantTemplate(it);
      if (jj_2_2(3)) {
        ;
      } else {
        break label_1;
      }
    }
    label_2:
    while (true) {
      r = rule_definition();
                            ca.addRule(r);
      if (jj_2_3(3)) {
        ;
      } else {
        break label_2;
      }
    }
    jj_consume_token(S_CB);
    if(population > 0)
    {
                ca.populateRandomly(population);
    }
    return ca;
  }

  final public Habitat habitat_definition() throws ParseException {
  boolean e=true;
  int width=0, height=0;
    jj_consume_token(HABITAT);
    jj_consume_token(S_OB);
    label_3:
    while (true) {
      if (jj_2_4(3)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_7(3)) {
        jj_consume_token(WIDTH);
        jj_consume_token(46);
        width = number_value();
      } else if (jj_2_8(3)) {
        jj_consume_token(HEIGHT);
        jj_consume_token(46);
        height = number_value();
      } else if (jj_2_9(3)) {
        jj_consume_token(ENVIRONMENT);
        jj_consume_token(46);
        if (jj_2_5(3)) {
          jj_consume_token(MOORE);
                                   e=true;
        } else if (jj_2_6(3)) {
          jj_consume_token(NEUMANN);
                                                         e=false;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(S_CB);
    Habitat h = new Habitat(width, height, e);
    return h;
  }

  final public Inhabitant inhabitant_template_definition() throws ParseException {
  String species;
  TreeMap <String, Integer> al=null;
  Color c=Color.BLACK;
    jj_consume_token(INHABITANT);
    jj_consume_token(TEMPLATE);
    species = identifier();
    jj_consume_token(S_OB);
    if (jj_2_10(3)) {
      al = attribute_list();
    } else {
      ;
    }
    jj_consume_token(S_CB);
    if (jj_2_11(3)) {
      jj_consume_token(IS);
      c = color_value();
    } else {
      ;
    }
    Inhabitant i = new Inhabitant(species, al, c);
    return i;
  }

  final public Rule rule_definition() throws ParseException {
  Evaluable e;
  Command c;
    jj_consume_token(IF);
    e = expression();
    jj_consume_token(THEN);
    c = command();
    jj_consume_token(S_END);
    Rule r = new Rule(e, c);
    return r;
  }

  final public TreeMap < String, Integer > attribute_list() throws ParseException {
  TreeMap < String, Integer > tm = new TreeMap < String, Integer > ();
  String key;
  Integer value;
    label_4:
    while (true) {
      key = identifier();
      jj_consume_token(46);
      value = number_value();
      jj_consume_token(S_END);
                                                      tm.put(key, value);
      if (jj_2_12(3)) {
        ;
      } else {
        break label_4;
      }
    }
    return tm;
  }

  final public Evaluable expression() throws ParseException {
  Evaluable l=null, r=null;
  Operation op=null;
  Evaluable rv;
    if (jj_2_14(3)) {
      l = exp();
      if (jj_2_13(3)) {
        op = op();
        r = exp();
      } else {
        ;
      }
      if(op==null)
      {
        rv=l;
      } else
      {
        op.setOperands(l,r);
        rv=op;
      }
    } else if (jj_2_15(3)) {
      jj_consume_token(NOT);
      l = exp();
                       rv = new NotExpression(l);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    return rv;
  }

  final public Evaluable exp() throws ParseException {
  String s;
  int i;
  boolean b;
  Evaluable f, rv;
    if (jj_2_16(3)) {
      b = boolean_value();
                       rv = new ConstExpression(b);
    } else if (jj_2_17(3)) {
      i = number_value();
                           rv = new Skalar(i);
    } else if (jj_2_18(3)) {
      f = function_call();
                       rv = f;
    } else if (jj_2_19(3)) {
      s = identifier();
                       rv = new GetValueFunction(s);
    } else if (jj_2_20(3)) {
      jj_consume_token(S_OB);
      rv = expression();
      jj_consume_token(S_CB);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     return rv;
  }

  final public Operation op() throws ParseException {
  Operation op;
    if (jj_2_21(3)) {
      jj_consume_token(AND);
          op = new AndExpression();
    } else if (jj_2_22(3)) {
      jj_consume_token(OR);
          op = new OrExpression();
    } else if (jj_2_23(3)) {
      jj_consume_token(XOR);
          op = new XorExpression();
    } else if (jj_2_24(3)) {
      jj_consume_token(OP_EQUAL);
               op = new EqualsExpression();
    } else if (jj_2_25(3)) {
      jj_consume_token(OP_LESS_OR_EQUAL);
                       op = new LessThanOrEqualExpression();
    } else if (jj_2_26(3)) {
      jj_consume_token(OP_MORE_OR_EQUAL);
                       op = new MoreThanOrEqualExpression();
    } else if (jj_2_27(3)) {
      jj_consume_token(OP_LESS);
              op = new LessThanExpression();
    } else if (jj_2_28(3)) {
      jj_consume_token(OP_MORE);
              op = new MoreThanExpression();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
      return op;
  }

  final public Command command() throws ParseException {
  String r, v, p=null;
  int n;
    if (jj_2_31(3)) {
      jj_consume_token(ACT_KILL);
      jj_consume_token(S_OB);
      if (jj_2_29(3)) {
        p = identifier();
      } else {
        ;
      }
      jj_consume_token(S_CB);
                                                   return new KillCommand(p);
    } else if (jj_2_32(3)) {
      jj_consume_token(ACT_CREATE);
      jj_consume_token(S_OB);
      if (jj_2_30(3)) {
        p = identifier();
      } else {
        ;
      }
      jj_consume_token(S_CB);
                                                   return new CreateCommand(p);
    } else if (jj_2_33(3)) {
      jj_consume_token(ACT_ADD);
      jj_consume_token(S_OB);
      p = identifier();
      jj_consume_token(47);
      n = number_value();
      jj_consume_token(S_CB);
                                                                    return new AddCommand(p, n);
    } else if (jj_2_34(3)) {
      jj_consume_token(ACT_DEPLOY);
      jj_consume_token(S_OB);
      r = identifier();
      jj_consume_token(47);
      v = identifier();
      jj_consume_token(S_CB);
                                                                 return new DeployCommand(r, v);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Evaluable function_call() throws ParseException {
  String p=null;
    if (jj_2_38(3)) {
      jj_consume_token(FCT_COUNT);
      jj_consume_token(S_OB);
      if (jj_2_35(3)) {
        p = identifier();
      } else {
        ;
      }
      jj_consume_token(S_CB);
                                                     return new CountFunction(p);
    } else if (jj_2_39(3)) {
      jj_consume_token(FCT_GETVALUE);
      jj_consume_token(S_OB);
      if (jj_2_36(3)) {
        p = identifier();
      } else {
        ;
      }
      jj_consume_token(S_CB);
                                                     return new GetValueFunction(p);
    } else if (jj_2_40(3)) {
      jj_consume_token(FCT_CHECK);
      jj_consume_token(S_OB);
      if (jj_2_37(3)) {
        p = identifier();
      } else {
        ;
      }
      jj_consume_token(S_CB);
                                                    return new CheckFunction(p);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public int number_value() throws ParseException {
  Token t;
    t = jj_consume_token(NUMBER);
    return Integer.parseInt(t.image);
  }

  final public boolean boolean_value() throws ParseException {
  boolean rv;
    if (jj_2_41(3)) {
      jj_consume_token(TRUE);
                   rv=true;
    } else if (jj_2_42(3)) {
      jj_consume_token(FALSE);
                                          rv=false;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    return rv;
  }

  final public String identifier() throws ParseException {
  String s="";
  Token t;
    t = jj_consume_token(IDENTIFIER);
            s = t.image;
            s = s.substring(0,s.length());
    return s;
  }

  final public int percentage_value() throws ParseException {
  Token t;
    t = jj_consume_token(NUMBER);
    jj_consume_token(48);
    return Integer.parseInt(t.image);
  }

  final public Color color_value() throws ParseException {
    if (jj_2_43(3)) {
      jj_consume_token(BLACK);
              return Color.BLACK;
    } else if (jj_2_44(3)) {
      jj_consume_token(BLUE);
              return Color.BLUE;
    } else if (jj_2_45(3)) {
      jj_consume_token(RED);
              return Color.RED;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_3R_6() {
    if (jj_scan_token(INHABITANT)) return true;
    if (jj_scan_token(TEMPLATE)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_28() {
    if (jj_scan_token(OP_MORE)) return true;
    return false;
  }

  private boolean jj_3_27() {
    if (jj_scan_token(OP_LESS)) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_scan_token(IS)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_scan_token(OP_MORE_OR_EQUAL)) return true;
    return false;
  }

  private boolean jj_3_25() {
    if (jj_scan_token(OP_LESS_OR_EQUAL)) return true;
    return false;
  }

  private boolean jj_3_24() {
    if (jj_scan_token(OP_EQUAL)) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(XOR)) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  private boolean jj_3_45() {
    if (jj_scan_token(RED)) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_44() {
    if (jj_scan_token(BLUE)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) {
    jj_scanpos = xsp;
    if (jj_3_45()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_43() {
    if (jj_scan_token(BLACK)) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(ENVIRONMENT)) return true;
    if (jj_scan_token(46)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) return true;
    }
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(HEIGHT)) return true;
    if (jj_scan_token(46)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(WIDTH)) return true;
    if (jj_scan_token(46)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3_20() {
    if (jj_scan_token(S_OB)) return true;
    if (jj_3R_16()) return true;
    if (jj_scan_token(S_CB)) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3R_5() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3_42() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_13() {
    if (jj_3R_12()) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_scan_token(POPULATE)) return true;
    if (jj_scan_token(46)) return true;
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_41() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }
